--- a/examples/partcad.yaml
+++ b/examples/partcad.yaml
@@ -7,4 +7,5 @@ import:
     desc: Examples that come with the PartCAD itself
     type: git
     url: https://github.com/openvmp/partcad
+    revision: main
     relPath: examples
