Added HomeDepot and updated urls to the partcad org on GitHub

--- a/examples/partcad.yaml
+++ b/examples/partcad.yaml
@@ -6,6 +6,6 @@ import:
   partcad:
     desc: Examples that come with the PartCAD itself
     type: git
-    url: https://github.com/openvmp/partcad
+    url: https://github.com/partcad/partcad
     revision: main
     relPath: examples
